action_details avoid overlapping colors

--- a/pandora_console/include/styles/pandora.css
+++ b/pandora_console/include/styles/pandora.css
@@ -3154,6 +3154,12 @@ table.alert_escalation th img {
   width: 18px;
 }
 
+.action_details td.used_field {
+  background: #6eb432;
+  color: #8d8d8d;
+  font-weight: normal;
+}
+
 td.used_field {
   background: #6eb432;
   color: #ffffff;
